--- a/calico/getting-started/kubernetes/vpp/index.mdx
+++ b/calico/getting-started/kubernetes/vpp/index.mdx
@@ -3,7 +3,7 @@ description: Install the VPP userspace dataplane to unlock extra performance for
 hide_table_of_contents: true
 ---
 
-# VPP dataplane tech preview
+# VPP dataplane
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
