--- a/calico/getting-started/kubernetes/vpp/specifics.mdx
+++ b/calico/getting-started/kubernetes/vpp/specifics.mdx
@@ -16,7 +16,7 @@ The main difference between VPP and a regular iptables/IPVS dataplane is in the 
 
 ## Known issues & unsupported features
 
-Although we aim at being feature complete, as VPP is still in beta status, some features are still unsupported or have known issues :
+Although we aim at being feature complete some features are still unsupported or have known issues :
 
 - For host endpoints policies, setting `doNotTrack` or `preDNAT` is not supported.
   - Setting them to `true` will result in the policy being ignored, and an error message to be printed by the calico-vpp-agent
