--- a/calico/reference/vpp/uplink-configuration.mdx
+++ b/calico/reference/vpp/uplink-configuration.mdx
@@ -6,22 +6,22 @@ description: Configuration parameters for the primary interface in VPP.
 
 You can choose different ways to consume the host's primary interface with VPP, usually with a tradeoff between performance and simplicity of configuration. Here are the main supported configurations.
 
-- `virtio` the interface is consumed with a native VPP driver. Performance is good and set up is simple, but only virtio interfaces are supported
-- `avf` we create a virtual function and consume it with a native VPP driver. Performance is good and setup simple, but only intel AVF interfaces are supported
-- `af_packet` the interface stays in Linux which passes packets to VPP. Performance is low, but it works out of the box with any interface
-- `af_xdp` packets are passed via eBPF. This requires a `>=5.4` kernel, but works out of the box with good performance
-- `dpdk` the interface is removed from Linux and consumed with the dpdk library. Performance and support are good, but setup can be complex
-- other native VPP drivers bring better performance than `dpdk` but require complex manual setup
+- `virtio` the interface is consumed with a native VPP driver. Performance is good and set up is simple, but only virtio interfaces are supported.
+- `avf` we create a virtual function and consume it with a native VPP driver. Performance is good and setup simple, but only intel AVF interfaces are supported.
+- `af_packet` the interface stays in Linux which passes packets to VPP. Performance is low, but it works out of the box with any interface.
+- `af_xdp` packets are passed via eBPF. This requires a `>=5.4` kernel, but works out of the box with good performance.
+- `dpdk` the interface is removed from Linux and consumed with the dpdk library. Performance and support are good, but setup can be complex.
+- other native VPP drivers bring better performance than `dpdk` but require complex manual setup.
 
 ## General mechanics
 
 The `calico-vpp-config` ConfigMap section of the manifest file contains the key `CALICOVPP_INTERFACES`, which is a dictionary with parameters
-specific to interfaces in calicovpp:
+specific to interfaces in {{prodname}} VPP:
 
 
 ```yaml
- # Configures parameters for calicovpp agent and vpp manager
-  CALICOVPP_INTERFACES: |-
+# Configures parameters for calicovpp agent and vpp manager
+CALICOVPP_INTERFACES: |-
     {
       "maxPodIfSpec": {
         "rx": 10, "tx": 10, "rxqsz": 1024, "txqsz": 1024
@@ -54,26 +54,24 @@ starting with the most performant. You'll still need to allocate hugepages if yo
 
 ## Using the native Virtio driver
 
-You can use this driver if your primary interface is virtio [`realpath /sys/bus/pci/devices/<PCI_ID>/driver` gives `.../virtio-net`]
+You can use this driver if your primary interface is virtio (`realpath /sys/bus/pci/devices/<PCI_ID>/driver` gives `.../virtio-net`)
 
 - Ensure you have hugepages available on your system (`sysctl -w vm.nr_hugepages=512`)
 - Ensure `vfio-pci` is loaded (`sudo modprobe vfio-pci`)
 - For the primary interface, `uplinkInterfaces[0]`, set `vppDriver` to "virtio"
 - Also ensure that your vpp config has no `dpdk` stanza and its plugin disabled
 
-Optionally if you would like to set the number/size of **rx** queues, refer to **UplinkInterfaceSpec** sub-section
-of [Getting Started](../../getting-started/kubernetes/vpp/getting-started.mdx).
+Optionally if you would like to set the number/size of **rx** queues, refer to **UplinkInterfaceSpec** sub-section of [Getting Started](../../getting-started/kubernetes/vpp/getting-started.mdx).
 
 ## Using the native AVF driver
 
-You can use this driver if your primary interface is supported by AVF [`realpath /sys/bus/pci/devices/<PCI_ID>/driver` gives `.../i40e`]
+You can use this driver if your primary interface is supported by AVF (`realpath /sys/bus/pci/devices/<PCI_ID>/driver` gives `.../i40e`)
 
 - Ensure `vfio-pci` is loaded (`sudo modprobe vfio-pci`)
 - For the primary interface, `uplinkInterfaces[0]`, set `vppDriver` to "avf"
 - Also ensure that your vpp config has no `dpdk` stanza and its plugin disabled
 
-Optionally if you would like to set the number/size of **rx** queues, refer to **UplinkInterfaceSpec** sub-section
-of [Getting Started](../../getting-started/kubernetes/vpp/getting-started.mdx).
+Optionally if you would like to set the number/size of **rx** queues, refer to **UplinkInterfaceSpec** sub-section of [Getting Started](../../getting-started/kubernetes/vpp/getting-started.mdx).
 
 ## Using AF_XDP
 
@@ -86,25 +84,24 @@ Ensure your kernel is at least `5.4` with `uname -r`
 - For the primary interface, `uplinkInterfaces[0]`, set `vppDriver` to "af_xdp"
 - Also ensure that your vpp config has no `dpdk` stanza and its plugin disabled
 - Finally `FELIX_XDPENABLED` should be set to `false` on the `calico-node` container otherwise felix will periodically cleanup the VPP configuration
+  ```yaml
+  ---
+  kind: DaemonSet
+  apiVersion: apps/v1
+  metadata:
+    name: calico-node
+    namespace: kube-system
+  spec:
+    template:
+      spec:
+        containers:
+          - name: calico-node
+            env:
+              - name: FELIX_XDPENABLED
+                value: 'false'
+  ```
 
-```yaml
----
-kind: DaemonSet
-apiVersion: apps/v1
-metadata:
-  name: calico-node
-  namespace: kube-system
-spec:
-  template:
-    spec:
-      containers:
-        - name: calico-node
-          env:
-            - name: FELIX_XDPENABLED
-              value: 'false'
-```
-
-With kustomize use `kubectl kustomize ./yaml/overlays/af-xdp | kubectl apply -f -`
+With kustomize use `kubectl kustomize ./yaml/overlays/af-xdp | kubectl apply -f -`.
 
 Optionally if you would like to set the number/size of **rx** queues or if you would like to customize whether we busy-poll the interface (`polling`),
 only use interrupts to wake us up (`interrupt`) or switch between both depending on the load (`adaptive`), refer to **UplinkInterfaceSpec** sub-section
@@ -132,47 +129,44 @@ You can also use `kubectl kustomize ./yaml/overlays/af-packet | kubectl apply -f
 ## Using native drivers with vpp's CLI
 
 This is a rather advanced/experimental setup and we'll take the example of the AVF driver for this, using vpp cli, but any vpp driver can be used.
-This allow to efficiently support other interface types.
+This allows to efficiently support other interface types.
 
 - For the primary interface, `uplinkInterfaces[0]`, set `vppDriver` to "none"
 - Ensure that your vpp config has no `dpdk` stanza and the dpdk plugin is disabled
-- Lastly, add an `exec /etc/vpp/startup.exec` entry in `unix { .. }`
-
-```yaml
-vpp_config_template: |-
-  unix {
-    nodaemon
-    full-coredump
-    log /var/run/vpp/vpp.log
-    cli-listen /var/run/vpp/cli.sock
-    exec /etc/vpp/startup.exec
-  }
-  ...
-  # removed dpdk { ... }
-  ...
-  plugins {
-      plugin default { enable }
-      plugin calico_plugin.so { enable }
-      plugin dpdk_plugin.so { disable }
-  }
-```
-
-Then update the `CALICOVPP_CONFIG_EXEC_TEMPLATE` environment variable to pass the interface creation cli(s).
-
-```yaml
-kind: DaemonSet
-apiVersion: apps/v1
-metadata:
-  name: calico-vpp-node
-  namespace: calico-vpp-dataplane
-spec:
-  template:
-    spec:
-      containers:
-        - name: vpp
-          env:
-            - name: CALICOVPP_CONFIG_EXEC_TEMPLATE
-              value: 'create interface avf 0000:ab:cd.1 num-rx-queues 1'
-```
+- Make sure the `exec /etc/vpp/startup.exec` entry is present in `unix { .. }`
+  ```yaml
+  CALICOVPP_CONFIG_TEMPLATE: |-
+    unix {
+      nodaemon
+      full-coredump
+      log /var/run/vpp/vpp.log
+      cli-listen /var/run/vpp/cli.sock
+      exec /etc/vpp/startup.exec
+    }
+    ...
+    # removed dpdk { ... }
+    ...
+    plugins {
+        plugin default { enable }
+        plugin calico_plugin.so { enable }
+        plugin dpdk_plugin.so { disable }
+    }
+  ```
+- Update the `CALICOVPP_CONFIG_EXEC_TEMPLATE` environment variable to pass the interface creation cli command(s).
+  ```yaml
+  kind: DaemonSet
+  apiVersion: apps/v1
+  metadata:
+    name: calico-vpp-node
+    namespace: calico-vpp-dataplane
+  spec:
+    template:
+      spec:
+        containers:
+          - name: vpp
+            env:
+              - name: CALICOVPP_CONFIG_EXEC_TEMPLATE
+                value: 'create interface avf 0000:ab:cd.1 num-rx-queues 1'
+  ```
 
 In the specific case of the AVF driver, the PCI id must belong to a VF that can be created with the `avf.sh` [script](https://github.com/projectcalico/vpp-dataplane/blob/{{vppbranch}}/test/scripts/utils/avf.sh). Different drivers will have different requirements.
