--- a/calico-enterprise_versioned_docs/version-3.16/_includes/content/_non-cluster-binary-install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/content/_non-cluster-binary-install.mdx
@@ -67,43 +67,47 @@ that behavior for certain configuration changes.
 
 If your distribution uses systemd, then you could use the following unit file:
 
-    [Unit]
-    Description=Calico Felix agent
-    After=syslog.target network.target
+```bash
+[Unit]
+Description=Calico Felix agent
+After=syslog.target network.target
 
-    [Service]
-    User=root
-    EnvironmentFile=/etc/calico/calico.env
-    ExecStartPre=/usr/bin/mkdir -p /var/run/calico
-    ExecStart=/usr/local/bin/{{nodecontainer}} -felix
-    KillMode=process
-    Restart=on-failure
-    LimitNOFILE=32000
+[Service]
+User=root
+EnvironmentFile=/etc/calico/calico.env
+ExecStartPre=/usr/bin/mkdir -p /var/run/calico
+ExecStart=/usr/local/bin/{{nodecontainer}} -felix
+KillMode=process
+Restart=on-failure
+LimitNOFILE=32000
 
-    [Install]
-    WantedBy=multi-user.target
+[Install]
+WantedBy=multi-user.target
+```
 
 Or, for upstart:
 
-    description "Felix (Calico agent)"
-    author "Project Calico Maintainers <maintainers@projectcalico.org>"
+```bash
+description "Felix (Calico agent)"
+author "Project Calico Maintainers <maintainers@projectcalico.org>"
 
-    start on stopped rc RUNLEVEL=[2345]
-    stop on runlevel [!2345]
+start on stopped rc RUNLEVEL=[2345]
+stop on runlevel [!2345]
 
-    limit nofile 32000 32000
+limit nofile 32000 32000
 
-    respawn
-    respawn limit 5 10
+espawn
+respawn limit 5 10
 
-    chdir /var/run
+chdir /var/run
 
-    pre-start script
-      mkdir -p /var/run/calico
-      chown root:root /var/run/calico
-    end script
+pre-start script
+   mkdir -p /var/run/calico
+   chown root:root /var/run/calico
+end script
 
-    exec /usr/local/bin/{{nodecontainer}} -felix
+exec /usr/local/bin/{{nodecontainer}} -felix
+```
 
 **Start Felix**
 
